--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <link href="css/main.css" rel="stylesheet" />
     <title>Fashion site</title>
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="container">
-        <div class="header__wrapper">
-          <img src="img/logo.svg" alt="logo" class="header__logo" />
-          <div class="header__burger" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-          </div>
+        <div class="header__body">
+          <a href="#" class="header__logo">
+            <img src="img/logo.svg" alt="Logo">
+          </a>
+          <div class="header__burger">
+            <span></span>
+        </div>
           <nav class="header__menu">
             <ul class="header__list">
               <li>
-                <a href="#" class="header__link active">Home</a>
+                <a href="#" class="header__link">Home</a>
               </li>
               <li>
                 <a href="#" class="header__link">Shop</a>
@@ -50,17 +50,17 @@
             </ul>
           </nav>
           <nav class="header__icons">
-            <ul class="header__list">
+            <ul class="header__items">
               <li>
-                <a href="#" class="header__link"
+                <a href="#" class="header__link icon"
                   ><i class="fas fa-search"></i
                 ></a>
               </li>
               <li>
-                <a href="#" class="header__link"><i class="far fa-heart"></i></a>
+                <a href="#" class="header__link icon"><i class="far fa-heart"></i></a>
               </li>
               <li>
-                <a href="#" class="header__link"
+                <a href="#" class="header__link icon"
                   ><i class="fas fa-shopping-cart"></i
                 ></a>
               </li>
@@ -69,6 +69,8 @@
         </div>
       </div>
     </header>
+    <!-- header -->
+    <!-- main -->
     <main class="main">
       <div class="container">
         <div class="main__block">
@@ -82,6 +84,7 @@
         </div>
       </div>
     </main>
+    <!-- main -->
     <section class="category">
       <div class="container">
         <div class="category__block">
@@ -99,7 +102,7 @@
         </div>
       </div>
     </section>
-    <section class="women">
+    <section class="card">
       <div class="container">
         <h2 class="title">Women's fashion</h2>
         <p class="subtitle">Shop our new arrivals from established brands</p>
@@ -141,7 +144,7 @@
       </div>
     </div>
     </section>
-    <section class="men">
+    <section class="card">
       <div class="container">
         <h2 class="title">MEN’S FASHION</h2>
         <p class="subtitle">Shop our new arrivals from established brands</p>
@@ -277,6 +280,7 @@
         <h6 class="copyright__title">Copyright © 2020 . Your company name  All rights reserved</h6>
       </div>
     </footer>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <!-- Подключение библиотеки jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Подключение скриптов -->
