position for main tag

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/reset.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -69,8 +66,9 @@
         </div>
       </div>
     </header>
-    <!-- header -->
-    <!-- main -->
+    <!-- end header -->
+    
+    <!-- start main -->
     <main class="main">
       <div class="container">
         <div class="main__block">
@@ -84,7 +82,7 @@
         </div>
       </div>
     </main>
-    <!-- main -->
+  <!-- end main -->
     <section class="category">
       <div class="container">
         <div class="category__block">
@@ -106,39 +104,39 @@
       <div class="container">
         <h2 class="title">Women's fashion</h2>
         <p class="subtitle">Shop our new arrivals from established brands</p>
-      <div class="women__cart-items">
-        <div class="women__cart-item">
+      <div class="cart-items">
+        <div class="cart-item">
           <img src="img/8.png" alt="">
-          <p class="women__name">IGURE</p>
-          <h3 class="women__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="women__price">
-            <strike class="women__old-price">$220.00</strike>
-            <p class="women__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
         </div>
-        <div class="women__cart-item">
+        <div class="cart-item">
           <img src="img/9.png" alt="">
-          <p class="women__name">IGURE</p>
-          <h3 class="women__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="women__price">
-            <strike class="women__old-price">$220.00</strike>
-            <p class="women__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
-        </div> <div class="women__cart-item">
+        </div> <div class="cart-item">
           <img src="img/6.png" alt="">
-          <p class="women__name">IGURE</p>
-          <h3 class="women__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="women__price">
-            <strike class="women__old-price">$220.00</strike>
-            <p class="women__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
-        </div> <div class="women__cart-item">
+        </div> <div class="cart-item">
           <img src="img/7.png" alt="">
-          <p class="women__name">IGURE</p>
-          <h3 class="women__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="women__price">
-            <strike class="women__old-price">$220.00</strike>
-            <p class="women__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
         </div>
       </div>
@@ -148,39 +146,39 @@
       <div class="container">
         <h2 class="title">MEN’S FASHION</h2>
         <p class="subtitle">Shop our new arrivals from established brands</p>
-      <div class="men__cart-items">
-        <div class="men__cart-item">
+      <div class="cart-items">
+        <div class="cart-item">
           <img src="img/13.png" alt="">
-          <p class="men__name">IGURE</p>
-          <h3 class="men__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="men__price">
-            <strike class="women__old-price">$220.00</strike>
-            <p class="women__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
         </div>
-        <div class="men__cart-item">
+        <div class="cart-item">
           <img src="img/11.png" alt="">
-          <p class="men__name">IGURE</p>
-          <h3 class="men__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="men__price">
-            <strike class="men__old-price">$220.00</strike>
-            <p class="men__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
-        </div> <div class="men__cart-item">
+        </div> <div class="cart-item">
           <img src="img/10.png" alt="">
-          <p class="men__name">IGURE</p>
-          <h3 class="men__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="men__price">
-            <strike class="men__old-price">$220.00</strike>
-            <p class="men__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
-        </div> <div class="men__cart-item">
+        </div> <div class="cart-item">
           <img src="img/12.png" alt="">
-          <p class="men__name">IGURE</p>
-          <h3 class="men__description">GREEN MUSCLE FIT POLO SHIRT</h3>
-          <div class="men__price">
-            <strike class="men__old-price">$220.00</strike>
-            <p class="men__new-price">$129.00</p>
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
           </div>
         </div>
       </div>
@@ -279,10 +277,10 @@
       <div class="container">
         <h6 class="copyright__title">Copyright © 2020 . Your company name  All rights reserved</h6>
       </div>
-    </footer>
+    </footer> 
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <!-- Подключение библиотеки jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- Подключение скриптов -->
     <script src="js/script.js"></script>
   </body>
