--- a/index.html
+++ b/index.html
@@ -130,6 +130,41 @@
             <strike class="old-price">$220.00</strike>
             <p class="new-price">$129.00</p>
           </div>
+        </div> 
+        <div class="cart-item">
+          <img src="img/7.png" alt="">
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
+          </div>
+        </div>
+        <div class="cart-item">
+          <img src="img/8.png" alt="">
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
+          </div>
+        </div>
+        <div class="cart-item">
+          <img src="img/9.png" alt="">
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
+          </div>
+        </div> <div class="cart-item">
+          <img src="img/6.png" alt="">
+          <p class="name">IGURE</p>
+          <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+          <div class="price">
+            <strike class="old-price">$220.00</strike>
+            <p class="new-price">$129.00</p>
+          </div>
         </div> <div class="cart-item">
           <img src="img/7.png" alt="">
           <p class="name">IGURE</p>
@@ -180,6 +215,40 @@
             <strike class="old-price">$220.00</strike>
             <p class="new-price">$129.00</p>
           </div>
+          </div>
+          <div class="cart-item">
+            <img src="img/13.png" alt="">
+            <p class="name">IGURE</p>
+            <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+            <div class="price">
+              <strike class="old-price">$220.00</strike>
+              <p class="new-price">$129.00</p>
+            </div>
+          </div>
+          <div class="cart-item">
+            <img src="img/11.png" alt="">
+            <p class="name">IGURE</p>
+            <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+            <div class="price">
+              <strike class="old-price">$220.00</strike>
+              <p class="new-price">$129.00</p>
+            </div>
+          </div> <div class="cart-item">
+            <img src="img/10.png" alt="">
+            <p class="name">IGURE</p>
+            <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+            <div class="price">
+              <strike class="old-price">$220.00</strike>
+              <p class="new-price">$129.00</p>
+            </div>
+          </div> <div class="cart-item">
+            <img src="img/12.png" alt="">
+            <p class="name">IGURE</p>
+            <h3 class="description">GREEN MUSCLE FIT POLO SHIRT</h3>
+            <div class="price">
+              <strike class="old-price">$220.00</strike>
+              <p class="new-price">$129.00</p>
+            </div>
         </div>
       </div>
     </div>
@@ -281,6 +350,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <!-- Подключение библиотеки jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!--Подключение  слайдера Slick-->
+    <script src="js/slick.min.js"></script>
     <!-- Подключение скриптов -->
     <script src="js/script.js"></script>
   </body>
